<resources>
    <string name="app_name">MPOS</string>
    <string name="app_title">MPOS</string>
    <string name="app_title_by">by MPOS</string>
    <string name="scan_btn">QR code</string>
    <string name="store_no">Store ID</string>
    <string name="user_name">User ID</string>
    <string name="user_name_one">Personal User ID</string>
    <string name="user_pass">Password</string>
    <string name="user_pass_one">Personal Password</string>
    <string name="btn_test_con">Test Connection</string>
    <string name="btn_login">Login</string>
    <string name="msg_fail">Failed</string>
    <string name="msg_success">Successful!</string>
    <string name="btn_setting">Log Out</string>
    <string name="item_table">Table Management</string>
    <string name="item_cost">Cost Estimate</string>
    <string name="item_cost_estimate">Estimation</string>
    <string name="restaurants_estimate">Restaurant Estimation</string>
    <string name="show_room_frag">Showroom Estimation</string>
    <string name="show_room_billing_frag">Showroom Billing</string>
    <string name="restaurant_billing_frag">Restaurant Billing</string>
    <string name="item_billing_estimate">Billing</string>
    <string name="payment_src">Payment</string>
    <string name="table_reservation">Table Reservation</string>
    <string name="open_table">Open</string>
    <string name="bok_tbl">Book the table</string>

    <string name="so_number">S no.</string>
    <string name="name_of_customer">Name</string>
    <string name="mobile_num">Mobile</string>
    <string name="time">Time</string>

    <string name="oder_desc">Description</string>
    <string name="oder_qty">Qty</string>
    <string name="oder_rate">Rate</string>
    <string name="oder_amt">Amount</string>
    <string name="oder_hint">Search or scan to add items</string>

    <string name="oder_confirm_btn">Confirm Order</string>
    <string name="oder_reset">Reset All</string>
    <string name="upi_request">Pay by UPI</string>
    <string name="card_request">Pay by Card</string>
    <string name="cash_request">Pay BY Cash</string>
    <string name="oder_del">Order History</string>
    <string name="print_order">Print Order</string>
    <string name="oder_view">View Deals</string>
    <string name="total_sum">Grand Total</string>

    <string name="arr_bck">back Arrow</string>
    <string name="arr_up">Up Arrow</string>
    <string name="clos_btn">clear</string>
    <string name="off_txt">No Offer</string>
    <string name="src_hint">Search..</string>
    <string name="hint_btn_add">Add</string>
    <string name="hint_btn_minus">Minus</string>

    <string name="btn_without_offer">Add without offer</string>
    <string name="btn_with_offer">Add with offer</string>
    <!-- Delete it Just A Sample String Value -->
    <string name="sample_total_amt">150</string>
    <string name="sample_tbl_num">Table %s</string>
    <string name="sample_tbl_time">Booking Time :%s</string>

    <string name="pr_btn">Print</string>
    <string name="sv_btn">Save</string>


    <string name="tbl_title_id">TBL-%s</string>
</resources>