<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_bg"
    tools:context="com.example.mpos.ui.tableorcost.TableManagementOrCostEstimate">


    <TextView
        android:id="@+id/mpos_id3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="Sample Mail this there fdjkdglk gjdfklgfdkl gjdfkldklfh jgdklfhlk"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintRight_toLeftOf="@id/logo_file_id3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/store_nm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/light_grey_color"
        android:textSize="15sp"
        android:text="@string/app_title_by"
        app:layout_constraintLeft_toLeftOf="@id/mpos_id3"
        app:layout_constraintTop_toBottomOf="@id/mpos_id3"
        />

    <ImageView
        android:id="@+id/logo_file_id3"
        android:layout_width="31dp"
        android:layout_height="34dp"
        android:layout_marginTop="11sp"
        android:layout_marginEnd="12sp"
        android:contentDescription="@string/app_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logofile" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/choose_table_or_cost_recycle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        app:spanCount="2"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/logout_txt2"
        app:layout_constraintLeft_toLeftOf="@id/mpos_id3"
        app:layout_constraintRight_toRightOf="@id/logo_file_id3"
        app:layout_constraintTop_toBottomOf="@id/store_nm"
        tools:listitem="@layout/table_item_layout" />


    <ImageView
        android:id="@+id/logout_btn_ic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/circle_shape"
        android:contentDescription="@string/btn_setting"
        android:padding="4dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_logout"
        app:tint="@color/black" />


    <TextView
        android:id="@+id/logout_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btn_setting"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/logout_btn_ic2"
        app:layout_constraintLeft_toRightOf="@id/logout_btn_ic2"
        app:layout_constraintTop_toTopOf="@id/logout_btn_ic2" />


</androidx.constraintlayout.widget.ConstraintLayout>